# mach

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  SPEC.md  astro.config.mjs  dist-workspace.toml  instant.perms.ts  instant.schema.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js
.github/workflows/: release.yml
crates/mach/: Cargo.toml
crates/mach-mcp/: Cargo.toml
crates/mach-mcp/src/: cli.rs  contracts.rs  handler.rs  lib.rs  main.rs  server.rs
crates/mach-mcp/src/tools/: add_todo.rs  delete_todo.rs  get_todo.rs  list_todos.rs  mark_done.rs  mark_pending.rs  mod.rs  move_todo.rs  traits.rs  update_todo.rs  util.rs
crates/mach/src/: cli.rs  main.rs
crates/mach/src/cmd/: add.rs  delete.rs  done.rs  list.rs  mod.rs  reopen.rs  update.rs
crates/mach/src/cmd/mcp/: mod.rs  server.rs
crates/mach/src/cmd/projects/: create.rs  done.rs  list.rs  mod.rs  reopen.rs  update.rs
crates/mach/src/cmd/workspaces/: create.rs  list.rs  mod.rs  update.rs
crates/mach/src/entity/: config.rs  mod.rs  project.rs  todo.rs  workspace.rs
crates/mach/src/service/: config.rs  connection.rs  error.rs  mod.rs  project.rs  todo.rs  workspace.rs
crates/mach/src/tui/: actions.rs  cursor.rs  draw.rs  input.rs  mod.rs  modes.rs  palette.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src/content/docs/: index.mdx  installation.md  quick-start.md
src/content/docs/reference/: cli.md  how-it-works.md  keyboard-shortcuts.md
src/lib/: instant.ts  team.svelte.ts  todos.svelte.ts  user.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/invites/: +page.svelte
src/routes/login/: +page.svelte
src/routes/team/: +page.svelte
src/routes/todos/: +page.svelte
