[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
authors = ["rvcas <x@rvcas.dev>"]
edition = "2024"
description = "A CLI tool for managing todos with a weekly calendar"
repository = "https://github.com/orbistry/mach"
license-file = "LICENSE"

[workspace.dependencies]
chrono = { version = "0.4.39", default-features = false, features = [
  "clock",
  "serde"
] }
clap = { version = "4.5.51", features = ["derive"] }
color-print = "0.3.7"
crossterm = "0.28.1"
directories = "5.0.1"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = { version = "0.29.0", features = [
  "all-widgets",
  "serde",
  "widget-calendar"
] }
sea-orm = { version = "2.0.0-rc", features = [
  "entity-registry",
  "macros",
  "runtime-tokio-rustls",
  "schema-sync",
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
turso = "0.3.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
