[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.4"
edition = "2024"
description = "A CLI tool for managing todos with a weekly calendar"
homepage = "https://machich.co"
repository = "https://github.com/rvcas/mach"
license = "Apache-2.0"

[workspace.dependencies]
chrono = { version = "0.4.39", default-features = false, features = [
  "clock",
  "serde"
] }
clap = { version = "4.5.51", features = ["derive"] }
color-print = "0.3.7"
crossterm = "0.28.1"
directories = "5.0.1"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = { version = "0.29.0", features = [
  "all-widgets",
  "serde",
  "widget-calendar"
] }
sea-orm = { version = "2.0.0-rc", features = [
  "entity-registry",
  "macros",
  "runtime-tokio-rustls",
  "schema-sync",
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

# MCP server dependencies
axum = "0.8"
rmcp = { version = "0.10", features = ["transport-streamable-http-server"] }

[profile.release]
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
